--- a/src/packages/utils/package.json
+++ b/src/packages/utils/package.json
@@ -5,8 +5,17 @@
   "devDependencies": {
     "@test-workspaces/configs": "1.0.0"
   },
+  "peerDependencies": {
+    "ts-jest": "^29.1.0"
+  },
   "scripts": {
-    "lint-staged": "echo 'Skipping lint-staged for eslint-config'",
-    "prettier:check": "echo 'Skipping prettier:check for eslint-config'"
+    "test": "jest"
+  },
+  "lint-staged": {
+    "(src)/**/*.{js,ts,tsx}": [
+      "eslint --fix-type layout --fix --cache",
+      "prettier --write",
+      "jest --findRelatedTests --silent"
+    ]
   }
 }
